Scratch Messaging: z-index fixes, tooltip hover fixes (#1488)
* Scratch Messaging: z-index fixes, tooltip hover fixes

* style: format code

--- a/popups/scratch-messaging/popup.css
+++ b/popups/scratch-messaging/popup.css
@@ -264,7 +264,7 @@ button {
 
 #bottom-bar {
   position: fixed;
-  z-index: 999;
+  z-index: 10000;
   bottom: 0;
   left: 0;
   right: 0;
