--- a/webpages/styles/components/tooltips.css
+++ b/webpages/styles/components/tooltips.css
@@ -34,7 +34,7 @@
   top: -3px;
   right: 95%;
   margin-left: 0;
-  margin-right: 15px;
+  margin-right: 4px;
   transform: none;
 }
 
